--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "frenly",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://sahilrathore.github.io/frenly-website/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build", 
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
